# Diffusion-Equation-with-MsFEM.io

./: CMakeLists.txt
doc/: README.md
include/: adpative_diffusion_problem.hpp  coefficients.h  config.h  diffusion_basis.hpp  diffusion_problem.hpp  diffusion_problem_multiscale.hpp  dirichlet_bc.hpp  initial_value.hpp  matrix_coeff.hpp  neumann_bc.hpp  q1basis.hpp  right_hand_side.hpp  solution_gaussian.hpp
source/: DiffusionProblem.cc
